# KB_CHILKEY_ND104_Multitool

./: .gitignore  CMakeLists.txt  Makefile  README-WIP.md  README.md  install_keyboard_driver.sh  install_weather.ps1
.github/workflows/: ci-cmake.yml  ci-make.yml
MakefileFolder/: base.mk  clock_update.mk  hidapi.mk  weather_update.mk
src/: clock_update.cpp  main.cpp  main_clock.cpp  main_weather.cpp  weather_update.cpp
src/include/: clock_update.hh  weather_update.hh
